--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,5 +1,5 @@
 .fondoCard{
-    background-image: url('../../assets/img/geo.png');
+    background-image: url('../../../assets/img/geo.png');
     background-size: cover;
 }
 
