--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,10 +7,13 @@
           <p class="card-text letraBlanca">Una vez esté validado correctamente, visualizarás el contenido.</p>
           
           <div *ngIf="archivoCargado; else elseBlock"> <!--https://angular.io/api/common/NgIf-->
-            <button class="btn btn-success" type="button" (click)="validar()">Validar</button>
+            <button class="btn btn-success" type="button" (click)="sendFile()">Validar</button>
           </div>
           <ng-template #elseBlock>
-            <button class="btn btn-primary" type="button" (click)="subirArchivo()">Subir archivo</button>
+            <input class="btn btn-primary" type="file" (change)="getFile($event)">
+            <div *ngIf="!archivoValidado"class="alert alert-danger" role="alert">
+              <i class="fa-solid fa-triangle-exclamation"></i> {{valorArchivo}}
+            </div>
           </ng-template>
         </div>
       </div>`
