--- a/src/app/vistas/json/json.component.html
+++ b/src/app/vistas/json/json.component.html
@@ -1,8 +1,24 @@
 <div class="container-fluid">
 
     <div class="card mt-3">
-        <h2 class="card-header text-center">JSON</h2>
+        <h2 class="card-header text-center">JSON / GEOJSON</h2>
         <div class="card-body text-center fondoCard">
+          <h5 class="card-title letraBlanca">Seleccione el archivo Json a validar</h5>
+          <p class="card-text letraBlanca">Una vez esté validado correctamente, visualizarás el contenido.</p>
+          
+          <div *ngIf="archivoCargado; else elseBlock"> <!--https://angular.io/api/common/NgIf-->
+            <button class="btn btn-success" type="button" (click)="validarJsonSchema()">Validar</button>
+          </div>
+          <ng-template #elseBlock>
+            <input class="btn btn-primary" type="file" (change)="getFile($event)">
+            <div *ngIf="!archivoValidado"class="alert alert-danger" role="alert">
+              <i class="fa-solid fa-triangle-exclamation"></i> {{valorArchivo}}
+            </div>
+          </ng-template>
+        </div>
+
+
+        <div class="card-body text-center fondoCard2 mt-5">
           <h5 class="card-title letraBlanca">Seleccione el archivo Json a validar</h5>
           <p class="card-text letraBlanca">Una vez esté validado correctamente, visualizarás el contenido.</p>
           
