--- a/src/app/vistas/shp/shp.component.css
+++ b/src/app/vistas/shp/shp.component.css
@@ -3,12 +3,12 @@
 }
 
 
-.violeta {
-    background-color: #9478A4;
+.azul {
+    background-color: #9DA6D7;
     /* SHP
     #9DA6D7
 
-    XLSs
+    XLS
     #95CAA3
 
     CSV
@@ -22,7 +22,7 @@
 }
 
 .fondoCard{
-    background-image: url('../../../assets/img/geotest.png');
+    background-image: url('../../../assets/img/shptest.png');
     background-size: cover;
     background-position: center;
 }
