--- a/src/app/vistas/json/json.component.html
+++ b/src/app/vistas/json/json.component.html
@@ -1,9 +1,10 @@
 <div class="container-fluid">
       <div class="card mt-3">
         <h2 class="card-header text-center">JSON / GEOJSON</h2>
-        <div class="card-body">
         <div class="row">
-          <div class="col-md-4 fondoCard"></div>
+          <div class="col-md-4">
+            <img src="../../../assets/img/geotest.png" class="img-fluid rounded-start" alt="...">
+          </div>
           <div class="col-md-1"><!--vacio--></div>
           <div class="col-md-7">
             <div class="card-body">
@@ -22,6 +23,5 @@
             </div>
           </div>
         </div>
-      </div>
     </div>
 </div>
