--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,6 +12,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/acerca">Acerca </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/bitacora">Bitácora </a>
+          </li>
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="buscar aqui..." aria-label="Search">
