--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -3,17 +3,18 @@
         <div class="col-md-4"><!--vacio--></div>
         <div class="col-md-4">
             <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="buscar aqui..." aria-label="Search">
-              </form>
+                <input class="form-control mr-sm-2 buscador" type="search" placeholder="Filtrar resultados..." aria-label="Search" [(ngModel)]="buscador" name="buscador">           
+            </form>
         </div>
         <div class="col-md-4"><!--vacio--></div>
 
     </div>
     <div class="row">
         <div class="col-md-12">
-            <table class="table mt-2">
+            <table class="table table-striped table-hover table-bordered mt-2">
                 <thead class="table-dark">
                   <tr>
+                    <th>Nombre Archivo</th>
                     <th>Modelo</th>
                     <th>Nombre</th>
                     <th>Estado</th>
@@ -22,12 +23,14 @@
                   </tr>
                 </thead>
                 <tbody *ngIf="bitacora">
-                    <tr *ngFor="let unaBitacora of bitacora" (click)="redirigirBitacoraEspecifica(unaBitacora.id)">
-                        <!-- <td class="text-center">{{unaBitacora.modelo}}</td>
+                    <tr *ngFor="let unaBitacora of bitacora | filter:buscador" (click)="redirigirBitacoraEspecifica(unaBitacora._id)">
+                        <td class="text-center">{{unaBitacora.nombreArchivo}}</td>
+                        <td class="text-center">{{unaBitacora.categorias[0].nombre}}</td>
                         <td class="text-center">{{unaBitacora.nombre}}</td>
-                        <td class="text-center">{{unaBitacora.estado}}</td>
-                        <td class="text-center">{{unaBitacora.createdAt}}</td>
-                        <td class="text-center">{{unaBitacora.observacion}}</td> -->
+                        <td *ngIf="unaBitacora.estado" class="text-center"><i class="fa-solid fa-check"></i></td>
+                        <td *ngIf="!unaBitacora.estado" class="text-center"><i class="fa-solid fa-xmark"></i></td>
+                        <td class="text-center">{{unaBitacora.createdAt | date: 'dd/MM/yyyy'}}</td>
+                        <td class="text-center">{{unaBitacora.observacion}}</td>
                     </tr>
                 </tbody>
             </table>
