--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -15,7 +15,7 @@
                 <thead class="table-dark">
                   <tr>
                     <th>Nombre Archivo</th>
-                    <th>Modelo</th>
+                    <th>Formato</th>
                     <th>Nombre</th>
                     <th>Estado</th>
                     <th>Fecha</th>
